# cs6e-py-code

./: LICENSE  README.md  pyproject.toml
samples/: fig0732a.txt  fig0732b.txt  fig07xx.txt  fig07xy.txt
src/cs6th_ch7/: __main__.py
src/cs6th_ch7/expr/: code_gen.py  lexer.py  parser.py  tokens.py
src/cs6th_ch7/fsm/: __init__.py  direct.py  hex_direct.py  lexer.py  table.py
src/cs6th_ch7/pep10/: arguments.py  code_gen.py  ir.py  lexer.py  macro.py  mnemonics.py  operands.py  parser.py  tokens.py  types.py
src/cs6th_ch7/utils/: buffer.py
tests/fsm/: test_direct.py  test_table.py
tests/pep10/: test_arguments.py  test_code_gen.py  test_ir.py  test_lexer.py  test_mnemonics.py  test_parser.py  test_symbol.py
