[project]
name = "cs6th-ch7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthew McRaven", email = "matthew.mcraven@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
]

[project.scripts]
main      = "cs6th_ch7.__main__:main"


[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 80

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
]
